    - command-prompt: a dfhack command prompt in df.

  New tweaks:
    - craft-age-wear: make crafted items wear out with time like in old versions (bug 6003)
    - adamantine-cloth-wear: stop adamantine clothing from wearing out (bug 6481)

  New plugins:
    - rendermax: replace the renderer with something else. Most interesting is "rendermax light"- a lighting engine for df.

  Misc improvements:
    - digfort: improved csv parsing, add start() comment handling
    - exterminate: allow specifying a caste (exterminate gob:male)
    - createitem: in adventure mode it now defaults to the controlled unit as maker.
    - autotrade: adds "(Un)mark All" options to both panes of trade screen.
    - mousequery: several usability improvements.
    - mousequery: show live overlay (in menu area) of what's on the tile under the mouse cursor.
    - search: workshop profile search added.
    - dwarfmonitor: add screen to summarise preferences of fortress dwarfs.
    - getplants: add autochop function to automate woodcutting.
    - stocks: added more filtering and display options.

  Siege engine plugin:
    - engine quality and distance to target now affect accuracy
    - firing the siege engine at a target produces a combat report
    - improved movement speed computation for meandering units
    - operators in Prepare To Fire mode are released from duty once
      hungry/thirsty if there is a free replacement

DFHack v0.34.11-r4

  New commands:
    - diggingInvaders - allows invaders to dig and/or deconstruct walls and buildings in order to get at your dwarves.
    - digFlood - automatically dig out specified veins as they are revealed
    - enable, disable - Built-in commands that can be used to enable/disable many plugins.
    - restrictice - Restrict traffic on squares above visible ice.
    - restrictliquid - Restrict traffic on every visible square with liquid.
    - treefarm - automatically chop trees and dig obsidian
  New scripts: