@@ -28,6 +28,7 @@ DFHack future
 
   New plugins:
     - rendermax: replace the renderer with something else. Most interesting is "rendermax light"- a lighting engine for df.
+    - automelt: allows marking stockpiles for automelt (i.e. any items placed in stocpile will be designated for melting)
 
   Misc improvements:
     - digfort: improved csv parsing, add start() comment handling
